# mechanics

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: docs.yml
classical_field/: string_1d.ipynb
docs/source/: conf.py  index.rst  modules.rst
examples/: README.md  double_pendulum.ipynb  double_pendulum.py  double_pendulum_vi.ipynb  kepler.ipynb  kepler_integrators.ipynb  wave_1d.ipynb
lib/: pyproject.toml
lib/examples/: N-body.ipynb  README.md  double_pendulum.py  double_pendulum_vi.ipynb  kepler.ipynb  kepler.py  kepler_integrators.ipynb  kepler_integrators.py  wave_1d.ipynb  wave_1d.py
lib/examples/__marimo__/session/: double_pendulum.py.json
lib/examples/figure/: kepler_orbit.asy
lib/src/mechanics/: __init__.py  config.py  conversion.py  difference.py  differential_equation.py  discretization.py  group.py  hamilton.py  lagrange.py  marimo.py  printing.py  space.py  symbol.py  util.py
lib/tests/: test_basics.py  test_calculation_element.py  test_conversion.py  test_group.py
src/examples/: N-body.ipynb  double_pendulum.ipynb  kepler.ipynb  vi.ipynb  wave_1d.ipynb
src/mechanics/: __init__.py  conversion.py  difference.py  differential.py  discretization.py  function.py  lagrange.py  printing.py  solver.py  util.py
src/mechanics/integrator/: euler.py  runge_kutta.py
src/mechanics/solver/: builder.py  fortran.py
src/tests/: test_basics.py
tethered_satellite/: dumbbell.ipynb  dumbbell_exact.ipynb
tethered_satellite/symmetry/: routh_reduction.ipynb  routh_reduction_exact.ipynb
(+12 files in other folders)
